# automatic-type-binding

./: LICENSE  automatic-type-binding.cabal
src/Foreign/: Marshals.hs
src/Foreign/Marshals/: Class.hs  TH.hs
test/: doctest.hs
