name:                automatic-type-binding
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Syoudi Yokoyama
maintainer:          quantumcars@gmail.com
copyright:           Syoudai Yokoyama
category:            Development
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:    Haskell2010
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  exposed-modules:
          Foreign.Marshals.Class
  build-depends:
          base >=4.7 && <4.8


test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctest.hs
  ghc-options:         -Wall -threaded
  build-depends:
          base
        , QuickCheck
        , doctest
        , doctest-prop
